# llm-research-fine-tuning

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  config.yaml  k8s.yaml  launch.py  peft.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
.github/workflows/: docker-image.yml
aihero/research/finetuning/: __init__.py  sft.py
app/: app.py  config.yaml  default_config.yaml  requirements.txt  sft.py  train.py  utils.py
app/old/: app.py  train.py
k8s/: launch.py  requirements.txt  serve.py  train.py
k8s/configs/: alpaca_peft.yaml  alpaca_sft.yaml  distributed_default.yaml  guanaco_peft.yaml  llmos_peft.yaml  llmos_qlora.yaml  llmos_sft.yaml  mmlu_peft.yaml  mmlu_qlora.yaml  mmlu_sft.yaml  open_instruct_peft.yaml  open_instruct_qlora.yaml  open_instruct_sft.yaml  openassistant_guanaco_peft.yaml  openassistant_guanaco_qlora.yaml  openassistant_guanaco_sft.yaml  text_to_sql_peft.yaml  text_to_sql_sft.yaml
k8s/distributed/: fsdp_single_worker.yaml
k8s/yamls/: config.yaml  config_template.yaml  job.yaml  job_template.yaml  peft.yaml  secret_template.yaml  secrets_template.yaml  service.yaml  training.yaml
k8s/yamls/serving/: deployment_template.yaml  secrets_template.yaml
k8s/yamls/training/: config_template.yaml  service_template.yaml
manifests/: README.md
manifests/config/: bnb.yaml  peft.yaml  training.yaml
manifests/config/sample_deployment/: bnb.yaml  job.yaml  training.yaml
poc/: poc.py  requirements.txt
src/aihero/: __init__.py
src/aihero/research/: __init__.py
src/aihero/research/finetuning/: __init__.py  callback.py  default_config.yaml  infer.py  sft.py  train.py  utils.py
src/finetuningresearch/: default_config.yaml  requirements.txt  sft.py
