[tool.poetry]
name = "aihero"
version = "0.2.0"
description = "Framework for open source research on fine-tuning LLMs"
authors = [
    "Rahul Parundekar <rahul@aihero.studio>",
    "Shankar Ganesan <gshankar.87@gmail.com>"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = ">=4.35.0"
peft = ">=0.5.0"
bitsandbytes = ">=0.41.1"
accelerate = ">=0.25.0"
trl = ">=0.7.2"
pydantic-settings = ">=2.0.3"
scipy = ">=1.11.3"
PyYAML = ">=6.0.1"
datasets = ">=2.14.6"
einops = ">=0.7.0"
wandb = ">=0.15.12"
python-dotenv = "*"
minio = ">=7.2.0"
fire = "*"
types-PyYAML = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^22.3", allow-prereleases = true}
mypy = "^0.910"
ruff = "^0.0.79"
blacken-docs = "^1.11.0"
pyupgrade = "^2.29.1"
detect-secrets = "^1.2.0"
tomli = "^1.2.3"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.black]
line_length = 120
target_version = ['py310']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = []
line-length = 120
select = [
    "D",
    "E",
    "F",
    "I",
    "W",
]
src = ["aihero", "tests"]

[mypy]
files = ["aihero"]
strict_optional = false
warn_unused_ignores = false
