[project]
name = "aihero-research-finetuning"
version = "0.3.0"
description = "Framework for open source research on fine-tuning LLMs"
authors = [
    {name = "Rahul Parundekar", email= "rahul@aihero.studio" },
    {name = "Shankar Ganesan", email = "gshankar.87@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "src/tests"

[tool.black]
line_length = 120
target_version = ['py39']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = []
line-length = 120
select = [
    "D",
    "E",
    "F",
    "I",
    "W",
]
src = ["src/aihero", "src/tests"]

[mypy]
files = ["src/aihero"]
strict_optional = false
warn_unused_ignores = false
