[project]
name = "aihero-research-finetuning"
version = "0.3.3"
description = "Framework for open source research on fine-tuning LLMs"
authors = [
    {name = "Rahul Parundekar", email= "rahul@aihero.studio" },
    {name = "Shankar Ganesan", email = "gshankar.87@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "accelerate==0.25.0",
    "aihero-research-config @ git+https://github.com/ai-hero/llm-research-config.git@main#egg=aihero-research-config",
    "bitsandbytes==0.41.3.post2",
    "datasets==2.14.6",
    "einops==0.7.0",
    "fire==0.5.0",
    "minio==7.2.0",
    "numpy==1.25.2",
    "peft==0.7.1",
    "pydantic-settings==2.0.3",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.1",
    "scikit-learn==1.4.0",
    "scipy==1.11.3",
    "transformers==4.36.1",
    "trl==0.7.7",
    "types-PyYAML==6.0.12.12",
    "wandb==0.15.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "black>=22.3",
    "mypy>=0.910",
    "ruff>=0.0.79",
    "blacken-docs>=1.11.0",
    "pyupgrade>=2.29.1",
    "detect-secrets>=1.2.0",
    "tomli>=1.2.3",
    "pre-commit>=2.17.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "src/tests"

[tool.black]
line_length = 120
target_version = ['py39']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = []
line-length = 120
select = [
    "D",
    "E",
    "F",
    "I",
    "W",
]
src = ["src/aihero", "src/tests"]

[mypy]
files = ["src/aihero"]
strict_optional = false
warn_unused_ignores = false
